update price tag color

--- a/frontend/src/components/layouts/OrganizerHomepage/EventCard/EventCard.module.scss
+++ b/frontend/src/components/layouts/OrganizerHomepage/EventCard/EventCard.module.scss
@@ -386,7 +386,7 @@
   font-size: 0.9375rem;
   color: var(--primary-text-color);
   padding: 0.375rem 0.75rem;
-  background: var(--bg-color);
+  background: var(--content-bg-color);
   border-radius: 8px;
   white-space: nowrap;
 
