feat: custom colour schemes with auto shades generation

--- a/frontend/src/components/layouts/AuthLayout/Auth.module.scss
+++ b/frontend/src/components/layouts/AuthLayout/Auth.module.scss
@@ -41,7 +41,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background: linear-gradient(135deg, var(--tk-pink) 0%, #6d28d9 100%);
+    background: linear-gradient(135deg, var(--mantine-color-primary-9) 0%, var(--mantine-color-secondary-3) 100%);
     opacity: 0.95;
   }
 
