--- a/frontend/src/components/layouts/Event/Event.module.scss
+++ b/frontend/src/components/layouts/Event/Event.module.scss
@@ -34,7 +34,7 @@
 
   .topBar {
     grid-area: topbar;
-    background: linear-gradient(90deg, var(--tk-primary), #5a1065);
+    background: linear-gradient(90deg, var(--mantine-color-primary-9), var(--mantine-color-secondary-9));
     display: flex;
     flex-direction: column;
     transition: box-shadow 0.3s ease;
@@ -268,7 +268,7 @@
 
     @include mixins.respond-below(md) {
       .topBarMain {
-        background: linear-gradient(90deg, var(--tk-primary), #5a1065);
+        background: linear-gradient(90deg,var(--mantine-color-primary-9), var(--mantine-color-secondary-9));
       }
     }
   }
@@ -285,7 +285,7 @@
     display: flex;
     flex-direction: column;
     grid-area: sidebar;
-    background: linear-gradient(180deg, var(--tk-primary), #5a1065);
+    background: linear-gradient(180deg, var(--mantine-color-primary-9), var(--mantine-color-secondary-9));
     color: var(--tk-color-white);
     position: relative;
     box-shadow: 4px 0 16px rgba(0, 0, 0, 0.1);
