--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,17 +1,17 @@
 @use "mixins";
 
 :root {
-  --tk-text: #4b3b5d;
-  --tk-primary: #472e78;
-  --tk-secondary: #efebf7;
-  --tk-secondary-text: #7c7091;
+  --tk-text: var(--mantine-color-primary-9);
+  --tk-primary: var(--mantine-color-primary-8);
+  --tk-secondary:  var(--mantine-color-secondary-1);
+  --tk-secondary-text: var(--mantine-color-primary-3);
   --tk-color-gray: #f7f6f8;
   --tk-color-gray-2: #e2e2e2;
   --tk-color-gray-dark: #838383;
   --tk-color-money-green: #00b894;
-  --tk-color-blue: rgba(23, 62, 161, 0.62);
+  --tk-color-blue: var(--mantine-color-primary-4);
   --tk-link-color: var(--tk-primary);
-  --tk-pink: #d6499c;
+  --tk-pink: var(--mantine-color-primary-5);
 
   --tk-color-white: #ffffff;
   --tk-color-black: #000000;
