Fix organizer logo positioning

--- a/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
@@ -20,6 +20,9 @@
       height: 30px;
       overflow: hidden;
       margin-right: 8px;
+      display: flex;
+      vertical-align: middle;
+      align-items: center;
 
       img {
         width: 100%;
