fix: replace left over hard-coded pink/purple values

--- a/frontend/src/components/layouts/EventHomepage/EventNotAvailable/EventNotAvailable.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventNotAvailable/EventNotAvailable.module.scss
@@ -60,7 +60,7 @@
   font-weight: 800;
   margin-bottom: var(--mantine-spacing-md);
   font-size: 32px;
-  background: linear-gradient(to right, var(--mantine-color-purple-6), var(--mantine-color-pink-6));
+  background: linear-gradient(to right, var(--mantine-color-primary-9), var(--mantine-color-secondary-8));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
