--- a/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventHomepage.module.scss
@@ -37,7 +37,7 @@
 .coverWrapper {
   position: relative;
   width: 100%;
-  height: 560px;
+  max-height: 560px;
   overflow: hidden;
 
   @include mixins.respond-below(md) {
